bin/testsuite/tests/compiler/src/errors/compiler4655.swg
#global testerror "Err0734"
#assert(1.0 ^ 1)
